# ChiffrageDevis

./: components.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: release.yml
app/: globals.css
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  menubar.tsx  select.tsx  sonner.tsx  table.tsx
src/components/ui/Dialogs/: AddArticle.tsx  AddDevis.tsx  AddProjectIndex.tsx  EditArticle.tsx  EditDevisDialog.tsx  EditProjectIndexDialog.tsx  Export.tsx
src/lib/: store.ts  utils.ts
src/pages/Chiffrage/: index.tsx
src/pages/Devis/: index.tsx
src/pages/main/: index.tsx
src/store/: consts.ts
